gitops/apps/kafka-poc/manifests/21-consumer.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: worker-consumer
  namespace: kafka-poc
  labels:
    app: worker-consumer
spec:
  replicas: 1
  selector:
    matchLabels:
      app: worker-consumer
  template:
    metadata:
      labels:
        app: worker-consumer
    spec:
      containers:
        - name: worker-consumer
          image: ghcr.io/bonge0115/worker-consumer:6976091
          imagePullPolicy: Always
