gitops/apps/kafka-poc/manifests/32-dlq-handler.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dlq-handler
  namespace: kafka-poc
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dlq-handler
  template:
    metadata:
      labels:
        app: dlq-handler
    spec:
      serviceAccountName: dlq-handler-sa
      containers:
        - name: dlq-handler
          image: 'ghcr.io/bonge0115/dlq-handler:5cf93c6' # 이미지 수정 
          imagePullPolicy: IfNotPresent
