gitops/apps/kafka-poc/manifests/11-producer.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: producer-api
  namespace: kafka-poc
spec:
  replicas: 1
  selector:
    matchLabels:
      app: producer-api
  template:
    metadata:
      labels:
        app: producer-api
    spec:
      containers:
        - name: producer-api
          image: ghcr.io/bonge0115/producer-api:latest # 이미지는 ghcr로 만든다. 이후 your-org는 실제 계정으로 수정
          imagePullPolicy: Always 
          ports:
            - containerPort: 8081
---
apiVersion: v1
kind: Service
metadata:
  name: producer-api
  namespace: kafka-poc
spec:
  type: LoadBalancer # 외부에서 프로듀서 api에 접속하기 위해 로드 밸런스 생성?
  selector:
    app: producer-api
  ports:
    - port: 8081
      targetPort: 8081
